--- a/README.Rmd
+++ b/README.Rmd
@@ -114,11 +114,11 @@ Or, using BibTex:
 
 ## Installation
 
-To install, first install `sva` and `limma` from bioconductor in R:
+To install, first install `sva`, `limma` and `cate` from bioconductor in R:
 ```{r, eval = FALSE}
 ## try http:// if https:// URLs are not supported
 source("https://bioconductor.org/biocLite.R")
-biocLite(c("limma", "sva"))
+biocLite(c("limma", "sva", "cate"))
 ```
 
 Then run in R:
