--- a/README.Rmd
+++ b/README.Rmd
@@ -114,14 +114,23 @@ Or, using BibTex:
 
 ## Installation
 
-To install, first install `sva`, `limma` and `cate` from bioconductor in R:
+To install, first install `sva` and `limma` from Bioconductor
+in R:
+
 ```{r, eval = FALSE}
 ## try http:// if https:// URLs are not supported
 source("https://bioconductor.org/biocLite.R")
-biocLite(c("limma", "sva", "cate"))
+biocLite(c("limma", "sva"))
+```
+
+Also install the cate R package:
+
+```{r, eval = FALSE}
+install.packages("cate")
 ```
 
 Then run in R:
+
 ```{r, eval = FALSE}
 install.packages("devtools")
 devtools::install_github("dcgerard/vicar")
