--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ empirical Bayes methods that use the powerful methodology of Adaptive
 Shrinkage [@stephens2016false] within the factor-augmented regression
 framework described in @wang2017confounder. `backwash()` is a slightly more 
 Bayesian version of `mouthwash()`. These methods are described in
-@gerard2018empirical.
+@gerard2020empirical.
 
 When one has control genes, there are many approaches to take. Such
 methods include RUV2 [@gagnon2012using], RUV4 [@gagnon2013removing],
@@ -57,7 +57,7 @@ confounder adjustment with control genes by
 3. Introduces RUV-impute, a more general framework for accounting for hidden confounders in regression. The function is called `ruvimpute()`
 4. Introduces RUV-Bayes, a Bayesian version of RUV. The function is called `ruvb()`.
 
-These additions are described in detail in @gerard2019unifying.
+These additions are described in detail in @gerard2021unifying.
 
 See also the related R packages
 [`cate`](https://cran.r-project.org/package=cate)
@@ -71,52 +71,38 @@ Check out [NEWS.md](NEWS.md) to see what's new with each version.
 
 If you use any of the control-gene based methods, please cite:
 
-> Gerard, D., & Stephens, M. 2019. "Unifying and Generalizing Methods for Removing Unwanted Variation Based on Negative Controls". *Statistica Sinica*, in press <[doi:10.5705/ss.202018.0345](https://doi.org/10.5705/ss.202018.0345)>.
+> Gerard, D., & Stephens, M. 2021. "Unifying and Generalizing Methods for Removing Unwanted Variation Based on Negative Controls". *Statistica Sinica*, 31(3), 1-22 <[doi:10.5705/ss.202018.0345](https://doi.org/10.5705/ss.202018.0345)>.
 
 Or, using BibTex:
 ``` tex
-@article{gerard2019unifying,
+@article{gerard2021unifying,
   title={Unifying and Generalizing Methods for Removing Unwanted Variation Based on Negative Controls},
   author={Gerard, David and Stephens, Matthew},
   journal={Statistica Sinica},
   doi={10.5705/ss.202018.0345},
-  volume={},
-  number={},
-  year={2019},
-  pages={in press}
+  volume={31},
+  number={3},
+  pages={1--22},
+  year={2021}
 }
 ```
 
 If you use either MOUTHWASH or BACKWASH, please cite:
 
-> Gerard, D., & Stephens, M. 2018. "Empirical Bayes shrinkage and false discovery rate estimation, allowing for unwanted variation", *Biostatistics*, , kxy029, <[doi:10.1093/biostatistics/kxy029](https://doi.org/10.1093/biostatistics/kxy029)>.
+> Gerard, D., & Stephens, M. 2020. "Empirical Bayes shrinkage and false discovery rate estimation, allowing for unwanted variation", *Biostatistics*, 21(1), 15-32 <[doi:10.1093/biostatistics/kxy029](https://doi.org/10.1093/biostatistics/kxy029)>.
 
 Or, using BibTex:
 ``` tex
-@article{gerard2018empirical,
+@article{gerard2020empirical,
   author = {Gerard, David and Stephens, Matthew},
-  title = {Empirical {B}ayes shrinkage and false discovery rate estimation, allowing for unwanted variation},
+  title = "{Empirical {B}ayes shrinkage and false discovery rate estimation, allowing for unwanted variation}",
   journal = {Biostatistics},
-  volume = {},
-  number = {},
-  pages = {kxy029},
-  year = {2018},
+  volume = {21},
+  number = {1},
+  pages = {15--32},
+  year = {2020},
+  issn = {1465-4644},
   doi = {10.1093/biostatistics/kxy029},
-}
-```
-
-Otherwise, please cite this package as:
-
-> Gerard, David. 2016. *vicar: Various Ideas for Confounder Adjustment in Regression*. [https://github.com/dcgerard/vicar](https://github.com/dcgerard/vicar).
-
-Or, using BibTex:
-``` tex
-@Manual{gerard2016vicar,
-    title = {{vicar}: Various Ideas for Confounder Adjustment in Regression},
-    author = {David Gerard},
-    year = {2016},
-    note = {R package version 0.1-9},
-    url = {https://github.com/dcgerard/vicar},
 }
 ```
 
