--- a/vignettes/vicar.bib
+++ b/vignettes/vicar.bib
@@ -1,25 +1,25 @@
-@article{gerard2019unifying,
+@article{gerard2021unifying,
   title={Unifying and Generalizing Methods for Removing Unwanted Variation Based on Negative Controls},
   author={Gerard, David and Stephens, Matthew},
   journal={Statistica Sinica},
   doi={10.5705/ss.202018.0345},
-  volume={},
-  number={},
-  year={2019},
-  pages={in press}
+  volume={31},
+  number={3},
+  pages={1--22},
+  year={2021}
 }
 
-@article{gerard2018empirical,
+@article{gerard2020empirical,
   author = {Gerard, David and Stephens, Matthew},
-  title = {Empirical {B}ayes shrinkage and false discovery rate estimation, allowing for unwanted variation},
+  title = "{Empirical {B}ayes shrinkage and false discovery rate estimation, allowing for unwanted variation}",
   journal = {Biostatistics},
-  volume = {},
-  number = {},
-  pages = {kxy029},
-  year = {2018},
+  volume = {21},
+  number = {1},
+  pages = {15--32},
+  year = {2020},
+  issn = {1465-4644},
   doi = {10.1093/biostatistics/kxy029},
 }
-
 
 
 @article {rocke2015excess,
